ui changes done

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -3,8 +3,8 @@
     <h1 style="text-align: center;">Project Components</h1>
     <br />
     <br />
+    <!-- <button class="btn btn-success mb-sm-3 float-right">Generate</button> -->
     <div>
-
         <mat-accordion>
             <mat-expansion-panel [expanded]="true">
                 <mat-expansion-panel-header>
