--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -98,8 +98,8 @@
           Flows</button>
         <div class="flowTable mt-sm-3" *ngIf="featureFlowRowData.length>0">
           <ag-grid-angular #agGrid style="width: 100%; height: 100%; margin-top: 50px;" id="myGrid" class="ag-theme-balham" domLayout='autoHeight'
-            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"
-            [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow() [frameworkComponents]="frameworkComponents" (gridReady)="onFlowGridReady($event)">
+            [columnDefs]="columnDefs" [rowSelection]="rowSelection" [rowData]="featureFlowRowData" [animateRows]="true"  [suppressRowClickSelection]="true"
+            [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow($event) [frameworkComponents]="frameworkComponents" (gridReady)="onFlowGridReady($event)">
           </ag-grid-angular>
         </div>
 
