--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4" *ngIf="projectEntity.length === 0">
+                    <div class="col-md-4" *ngIf="projectEntity?.length === 0">
                         No Entity Available.
                     </div>
                 </div>
@@ -100,13 +100,13 @@
                         <div class="col-md-4" *ngFor="let screen of screenDetails; let i = index">
                             <div class="card">
                                 <div class="card-header">
-                                    {{screen.foldername}}
+                                    {{screen?.screenName}}
                                     <img style="float: right; cursor: pointer;"
                                         src="https://img.icons8.com/metro/26/000000/edit-file.png">
                                 </div>
                                 <div class="card-body">
 
-                                    <button mat-raised-button color="primary">Edit</button>
+                                    <button mat-raised-button color="primary" (click)="editScreen(screen._id)">Edit</button>
                                     &nbsp;
                                     <button mat-raised-button color="warn"
                                         [disabled]="entity.is_default">Delete</button>
