menu builder added and generator backend code change

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -135,6 +135,7 @@
     </div> -->
             </mat-expansion-panel>
             <app-techarchitecture-manager></app-techarchitecture-manager>
+            <app-menu-builder></app-menu-builder>
         </mat-accordion>
     </div>
 </div>
