delete api added in screen microservice

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -98,7 +98,8 @@
                       <button mat-raised-button color="primary"  (click)="editScreen(screen._id)"
                           >Edit</button>
                       &nbsp;
-                      <button mat-raised-button color="warn" [disabled]="entity.is_default"
+                      <button mat-raised-button color="warn" (click)="deleteScreen(screen._id)"
+                       [disabled]="entity.is_default"
                           >Delete</button>
                   </div>
               </div>
