--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -108,7 +108,7 @@
 
                                     <button mat-raised-button color="primary" (click)="editScreen(screen._id)">Edit</button>
                                     &nbsp;
-                                    <button mat-raised-button color="warn"
+                                    <button mat-raised-button color="warn" (click)="deleteScreen(screen._id)"
                                         [disabled]="entity.is_default">Delete</button>
                                 </div>
                             </div>
