--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
@@ -31,7 +31,8 @@
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+          <app-tree-drag></app-tree-drag>
+          <!-- <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>Screen</h6>
             <mat-form-field>
               <mat-label>Select a Screens</mat-label>
@@ -41,20 +42,24 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-          </div>
+          </div> -->
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <div class="form-group">
               <label for="name">Description</label>
-              <input type="text" class="form-control" name="description" placeholder="Enter Description" [(ngModel)]="description" />
+              <input type="text" class="form-control" name="description" placeholder="Enter Description"
+                [(ngModel)]="description" />
             </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+          <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 mt-sm-3 mt-md-3 mt-lg-3 mt-xl-3">
+            <button class="btn btn-primary">Update</button>
+          </div>
+          <!-- <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>OS Type</h6>
             <mat-form-field>
               <mat-label>Select a OS</mat-label>
@@ -64,17 +69,9 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-          </div>
+          </div> -->
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <app-tree-drag></app-tree-drag>
-          <!-- <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-            </div>
-          <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 mt-sm-3 mt-md-3 mt-lg-3 mt-xl-3">
-              <button class="btn btn-primary">Update</button>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-          </div> -->
         </div>
       </div>
     </div>
