--- a/application/clients/desktop/src/assets/scss/_geppetto.scss
+++ b/application/clients/desktop/src/assets/scss/_geppetto.scss
@@ -10,7 +10,10 @@ body {
 }
 
 
-
+// ======= APP CONTAINER ======= 
+app-root {
+	@include virtual-footer;
+}
 // ======= HEADER ======= 
 div.lang-head {
 	@include container-topBar;
@@ -19,9 +22,11 @@ div.lang-head {
 mat-toolbar.mat-toolbar.mat-primary[_ngcontent-c2] {
 	@include container-header;
 
-	div[_ngcontent-c2] {
+	div[_ngcontent-c2]:first-child {
 		@include header-logo();
 	}
+
+	@include main-navigation;
 }
 
 // ======= HOME PAGE ======= 
@@ -39,5 +44,11 @@ app-login {
 		@include modal-login;
 	}
 }
+
+// ======= PROJECTS ======= 
+app-projects .container {
+	@include container-projects-dashboard;
+}
+
 
 
