--- a/application/clients/desktop/src/assets/scss/_mixins.scss
+++ b/application/clients/desktop/src/assets/scss/_mixins.scss
@@ -216,6 +216,11 @@
 		.sitecard-info {
 			z-index: 10;
 		}
+		.sitecard-title {
+			font-size: rem-calc(27);
+			font-weight: bold;
+			margin-bottom: 0.3rem;
+		}
 		.sitecard-actions {
 			position: relative;
 			z-index: 10;
