--- a/application/clients/desktop/src/assets/scss/_variables.scss
+++ b/application/clients/desktop/src/assets/scss/_variables.scss
@@ -37,6 +37,7 @@ $font_sans_alt: Arial, Helvetica Neue, Helvetica, sans-serif;
 
 // Metrics
 $m_maxwidth: 1140px;
+$m_footer_width: $m_maxwidth - 30px;
 $m_radius: 3px;
 $m_transition-speed: 0.2s;
 
