Google sign-in commit.

--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -19,8 +19,8 @@
         <div style="color:red; text-align: center">
             {{errormessage}}
         </div>
-        <!-- <button mat-raised-button (click)='google()' color="primary">Google Signin!</button>
-        <button mat-raised-button (click)='facebook()' color="primary">Facebook Signin!</button> -->
+        <button mat-raised-button (click)='googlesigin("google")' color="primary">Google Signin!</button>
+        <button mat-raised-button (click)='facebooksigin("facebook")' color="primary">Facebook Signin!</button>
     </mat-card-actions>
     <!-- <a href={{href}}></a> -->
 </mat-card>
