--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card class="cardsize">
     <mat-card-header class="imagealign">
-        <div mat-card-avatar >
+        <div mat-card-avatar>
             <img mat-card-image src="../../assets/GeppettoIcon.png">
         </div>
     </mat-card-header>
@@ -14,13 +14,47 @@
         <input matInput type="password" [(ngModel)]='user.password'>
     </mat-form-field>
     <br>
+    <mat-checkbox class="example-margin" (change)="newuser($event,check)"  [(ngModel)]="isChecked" >New User</mat-checkbox>
+    <br>
     <mat-card-actions>
         <button mat-raised-button (click)='Login(user)' color="primary">Login!</button>
         <div style="color:red; text-align: center">
             {{errormessage}}
         </div>
+
         <button mat-raised-button (click)='googlesigin("google")' color="primary">Google Signin!</button>
-        <button mat-raised-button (click)='facebooksigin("facebook")' color="primary">Facebook Signin!</button>
+        <!-- <button mat-raised-button (click)='facebooksigin("facebook")' color="primary">Facebook Signin!</button> -->
     </mat-card-actions>
+
+    <div *ngIf="signup">
+        <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayModel}">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">user details</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Default input -->
+                        <label for="exampleForm2">First name</label>
+                        <input type="text" id="exampleForm2" class="form-control"  [(ngModel)]='user.firstName'>
+                        <!-- Default input -->
+                        <label for="exampleForm2">last name</label>
+                        <input type="text" id="exampleForm2" class="form-control" [(ngModel)]='user.lastName'>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            (click)="closeDeleteFModel()">Close</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            (click)="newUserLogin(sign)">Login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- <a href={{href}}></a> -->
+
 </mat-card>
