--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -107,7 +107,7 @@
                                 </div>
                                 <div class="card-body">
 
-                                    <button mat-raised-button color="primary" (click)="editScreen(screen._id)">Edit</button>
+                                    <button mat-raised-button color="primary" (click)="editScreen(screen._id, screen.screenType)">Edit</button>
                                     &nbsp;
                                     <button mat-raised-button color="warn" (click)="deleteScreen(screen._id)"
                                         [disabled]="entity.is_default">Delete</button>
