--- a/application/clients/desktop/src/app/navigation/header/header.component.html
+++ b/application/clients/desktop/src/app/navigation/header/header.component.html
@@ -19,6 +19,7 @@
         <div class="dropdown-menu pull-right">
           <a class="dropdown-item" routerLink="/flow-manager">{{'flowManager' | i18next}}</a>
           <a class="dropdown-item" *ngIf='configfields == "true"' routerLink="/config-manager">Configuration</a>
+          <a class="dropdown-item" *ngIf='configfields == "true"' routerLink="/admin">Dashboard</a>
           <a class="dropdown-item" routerLink="/available-connector">Available Connector</a>
         </div>
       </div>
