screen name added in screen designer

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -76,7 +76,7 @@
                   </div>
                   <div class="card-body">
                       
-                      <button mat-raised-button color="primary"  (click)="editScreen(screen._id)"
+                      <button mat-raised-button color="primary"  (click)="editScreen(screen._id, screen.screenType)"
                           >Edit</button>
                       &nbsp;
                       <button mat-raised-button color="warn" (click)="deleteScreen(screen._id)"
