--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -236,15 +236,15 @@
                             <!-- <label for="upload">Upload File</label> -->
                             <div class="mb-sm-2">
                                 <label for="name">UI YAML</label><br />
-                                <input type="file" (change)="fileSelected($event)" />
+                                <input #uiFile type="file" (change)="fileSelected($event)" />
                             </div>
                             <div class="mb-sm-2">
                                 <label for="name">Service YAML</label><br />
-                                <input type="file" (change)="fileSelectedBack($event)" />
+                                <input #serviceFile type="file" (change)="fileSelectedBack($event)" />
                             </div>
                             <div class="mb-sm-2">
                                 <label for="name">ApiGateway YAML</label><br />
-                                <input type="file" (change)="fileSelectedApi($event)" />
+                                <input #apiGatewayFile type="file" (change)="fileSelectedApi($event)" />
                             </div>
                             <!-- <input type="file" class="form-control" name="upload" (change)="handleFileInput($event.target.files)" accept=".yaml,.yml"/> -->
                         </div>
