--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -50,7 +50,38 @@
   </div>
 </div>
 
+
+
 <!-- <div id="testDiv">Hello Ramkumar</div> -->
+
+<div class="modal" id="myModal" tabindex="-1" role="dialog" 
+   style="display: none">
+  <div class="modal-dialog modal-md" role="dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Screen</h5>
+        <button type="button" class="close" (click)="closeScreeName()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group row">
+          <label for="screen-name" class="col-sm-4 col-form-label">Screen Name</label>
+          <div class="col-sm-8">
+            <input type="text" [(ngModel)]="screenName" (ngModelChange)="isScreenNameExist()"
+             class="form-control" id="screen-name">
+             <small *ngIf="screenNameExist" style="font-style: italic;
+             color: red;">This screen Name is Exist.</small>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closeScreeName()">Close</button>
+        <button type="button" [disabled]="screenNameExist" class="btn btn-primary" (click)="updateScreeName()">Update</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- events action popup model -->
 <div id="EventPopup" class="modal" tabindex="-1" role="dialog" style="display: none">
@@ -326,3 +357,5 @@
     </div>
   </div>
 </div>
+
+
