--- a/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktop/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -1,4 +1,3 @@
-
 // predefined css
 
 #logo-c {
@@ -22,7 +21,7 @@
 }
 
 .gjs-rte-toolbar {
-    box-shadow: 0 10px 35px rgba(0,0,0,0.5);
+    box-shadow: 0 10px 35px rgba(0, 0, 0, 0.5);
 }
 
 .cke_inner {
@@ -32,6 +31,7 @@
 .cke_chrome {
     border: none !important;
 }
+
 .cke_toolgroup {
     border: none !important;
     background: transparent !important;
@@ -56,71 +56,87 @@
 a.cke_button_off:hover {
     box-shadow: none;
     background-image: none;
-    background: rgba(255,255,255, 0.1);
+    background: rgba(255, 255, 255, 0.1);
 }
 
 .cke_button_on {
     box-shadow: none;
     background-image: none;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
 }
 
 /* The container must be positioned relative: */
 .custom-select {
-position: relative;
-font-family: Arial;
+    position: relative;
+    font-family: Arial;
 }
 
 .custom-select select {
-display: none; /*hide original SELECT element: */
+    display: none;
+    /*hide original SELECT element: */
 }
 
 .select-selected {
-background-color: DodgerBlue;
+    background-color: DodgerBlue;
 }
 
 /* Style the arrow inside the select element: */
 .select-selected:after {
-position: absolute;
-content: "";
-top: 14px;
-right: 10px;
-width: 0;
-height: 0;
-border: 6px solid transparent;
-border-color: #fff transparent transparent transparent;
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
 }
 
 /* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
-border-color: transparent transparent #fff transparent;
-top: 7px;
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
 }
 
 /* style the items (options), including the selected item: */
-.select-items div,.select-selected {
-color: #ffffff;
-padding: 8px 16px;
-border: 1px solid transparent;
-border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-cursor: pointer;
+.select-items div,
+.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
 }
 
 /* Style items (options): */
 .select-items {
-position: absolute;
-background-color: DodgerBlue;
-top: 100%;
-left: 0;
-right: 0;
-z-index: 99;
+    position: absolute;
+    background-color: DodgerBlue;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
 }
 
 /* Hide the items when the select box is closed: */
 .select-hide {
-display: none;
+    display: none;
 }
 
-.select-items div:hover, .same-as-selected {
-background-color: rgba(0, 0, 0, 0.1);
+.select-items div:hover,
+.same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
 }
+
+
+// app-header-language {
+//     display: none;
+// }
+
+// app-header {
+//     display: none;
+// }
+
+// .mat-toolbar .mat-primary .mat-toolbar-single-row {
+//     display: none !important;
+// }
