--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -11,8 +11,12 @@
     <br>
     <mat-form-field class="password" appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput type="password" [(ngModel)]='user.password'>
+        <input matInput  [type]="show ? 'text' : 'password'" pw-show-hide="icon" [(ngModel)]='user.password' (keyup.enter)="Login(user)">
+         <span class="input-group-addon eye">
+        <i class="fa fa-eye-slash" aria-hidden="true" (click)= "hideEye()"></i>
+      </span>
     </mat-form-field>
+   
     <br>
     <mat-checkbox class="example-margin" (change)="newuser($event,check)"  [(ngModel)]="isChecked" >New User</mat-checkbox>
     <br>
@@ -48,13 +52,17 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal"
                             (click)="closeDeleteFModel()">Close</button>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                            (click)="newUserLogin(sign)">Login</button>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                        (click)="newUserLogin(sign)">Login</button>
+                    </div>
+                           
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    <!-- </div> -->
     <!-- <a href={{href}}></a> -->
 
 </mat-card>
