--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
@@ -24,7 +24,7 @@
           <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
             <div class="form-group">
               <label for="name">Name</label>
-              <input type="text" class="form-control" name="name" placeholder="Enter Name" [(ngModel)]="description" />
+              <input type="text" class="form-control" name="name" disabled placeholder="Enter Name" [(ngModel)]="name" />
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 mt-sm-3 mt-md-3 mt-lg-3 mt-xl-3">
-            <button class="btn btn-primary">Update</button>
+            <button class="btn btn-primary" (click)="updateMenuBuilder(description)">Update</button>
           </div>
           <!-- <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>OS Type</h6>
