--- a/application/clients/desktop/src/app/menu-builder/tree-drag/tree-drag.component.html
+++ b/application/clients/desktop/src/app/menu-builder/tree-drag/tree-drag.component.html
@@ -1,19 +1,22 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding
-    (dragover)="handleDragOver($event, node);" (dragend)="handleDragEnd($event);" (drop)="handleDrop($event, node);">
+    (dragover)="handleDragOver($event, node);" (dragend)="handleDragEnd($event);" (drop)="handleDrop($event, node);"
+    (click)="logNode(node)">
     <button mat-icon-button disabled></button>
     <span class="checklist-leaf-node" draggable="true" (dragstart)="handleDragStart($event, node);">
       <span class="nodeContent" [ngClass]="{'drag-start': dragNode===node}">
         {{node.item}}
       </span>
     </span>
-    <!-- <button mat-icon-button (click)="deleteItem(node)"><mat-icon>delete_outline</mat-icon></button>  -->
+    <!-- <button mat-icon-button (click)="deleteItem(node)">
+      <mat-icon>delete_outline</mat-icon>
+     </button> -->
   </mat-tree-node>
 
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding
     (dragover)="handleDragOver($event, node);" (dragend)="handleDragEnd($event, node);"
-    (drop)="handleDrop($event, node);">
+    (drop)="handleDrop($event, node);" (click)="logNode(node)">
     <!--[ngClass]="getStyle(node)" use this in mat-tree-node if u need any color background need while drag and drop-->
     <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.item">
       <mat-icon class="mat-icon-rtl-mirror">
@@ -25,7 +28,9 @@
         {{node.item}}
       </span>
     </span>
-    <!-- <button mat-icon-button (click)="addNewItem(node)"><mat-icon>add_circle_outline</mat-icon></button> -->
+    <!-- <button mat-icon-button (click)="addNewItem(node)">
+      <mat-icon>add_circle_outline</mat-icon>
+    </button> -->
   </mat-tree-node>
 </mat-tree>
 
