--- a/application/clients/desktop/src/app/project-component/edit-popup/edit-popup.component.html
+++ b/application/clients/desktop/src/app/project-component/edit-popup/edit-popup.component.html
@@ -9,11 +9,11 @@
     <input matInput [(ngModel)]="modelObject.description">
   </mat-form-field>
   <br />
-  <!-- <mat-radio-group [(ngModel)]="modelObject.entityType" #radioGroup="matRadioGroup">
+  <mat-radio-group [(ngModel)]="modelObject.entityType" #radioGroup="matRadioGroup">
     <mat-radio-button [disabled]="isPrimaryEntityPresent" value="primary">Primary</mat-radio-button>
     &nbsp;&nbsp;
     <mat-radio-button value="secondary">Secondary</mat-radio-button>
-  </mat-radio-group> -->
+  </mat-radio-group>
 </div>
 <br />
 <br />
