--- a/application/clients/desktop/src/assets/scss/_geppetto.scss
+++ b/application/clients/desktop/src/assets/scss/_geppetto.scss
@@ -11,15 +11,15 @@ body {
 
 
 // ======= APP CONTAINER ======= 
-body {
-	@include virtual-footer;
-}
+// body {
+// 	@include virtual-footer;
+// }
 // ======= HEADER ======= 
 div.lang-head {
 	@include container-topBar;
 }
 
-mat-toolbar.mat-toolbar.mat-primary[_ngcontent-c2] {
+app-header > mat-toolbar.mat-toolbar.mat-primary[_ngcontent-c2] {
 	@include container-header;
 
 	div[_ngcontent-c2]:first-child {
