grape js templates are see to the data base and display in the ui

--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -4,6 +4,7 @@
     <br />
     <br />
     <!-- <button class="btn btn-success mb-sm-3 float-right">Generate</button> -->
+    <button class="btn btn-success mb-sm-3" [routerLink]="['/templates']">Geppetto Templates</button>
     <div>
         <mat-accordion>
             <mat-expansion-panel [expanded]="true">
