--- a/application/clients/desktop/src/app/template-screen/template-screen.component.html
+++ b/application/clients/desktop/src/app/template-screen/template-screen.component.html
@@ -1,31 +1,39 @@
 <section class="wrapper">
-  <div class="container-fostrap">
+  <div class="container">
     <div>
-      <img src="" class="fostrap-logo" />
       <h1 class="heading">
         Geppetto Templates
       </h1>
     </div>
+    <div class="col-md-12">
+      <div class="row-button">
+        <button class="btn btn-success pull-right">Add Template </button>
+      </div>
+    </div>
     <div class="content">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 ml-sm-2 bg_align " *ngFor="let template of gepTemplates">
-            <div class="card">
+          <div class="col-lg-4" *ngFor="let template of gepTemplates;let i = index">
+            <div class="card" (click)="ShowSelected(i)">
               <a class="img-card">
                 <img src={{template.template_image[0].image}} />
               </a>
               <!-- <div class=" card-content">
-                <h4 class="card-title">
-
-                </h4>
-                <p class="">
-                </p>
-            </div> -->
+                  <h4 class="card-title">
+  
+                  </h4>
+                  <p class="">
+                  </p>
+              </div> -->
               <div class="card-body">
                 <p>{{template.name}}</p>
               </div>
+              <div class="overlay">
+                <div class="text">Select</div>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
