--- a/application/clients/desktop/src/app/template-screen/template-screen.component.scss
+++ b/application/clients/desktop/src/app/template-screen/template-screen.component.scss
@@ -15,14 +15,10 @@ body {
   width: 100%;
 }
 
-.container-fostrap {
+.container {
   display: table-cell;
   padding: 1em;
   text-align: center;
-}
-.fostrap-logo {
-  width: 100px;
-  margin-bottom:15px
 }
 h1.heading {
   color: #fff;
@@ -45,16 +41,20 @@ h1.heading {
   h1.heading {
     font-size: 3.25em;
     margin: 0 0 0.3em;
+    margin: 5%;
   }
 } 
 .card {
-  display: block; 
     margin-bottom: 20px;
     line-height: 1.42857143;
     background-color: #fff;
     border-radius: 2px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); 
-    transition: box-shadow .25s; 
+    transition: box-shadow .25s;
+    border-style: solid;
+    border-color: yellow magenta;
+    border-width: 5px; 
+    cursor: pointer;
 }
 .card:hover {
   box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -96,16 +96,39 @@ h1.heading {
   font-weight:600;
   text-transform: uppercase
 }
-.bg_align{
-    background: #343a40;
-    padding-top: 14px;
-}
-.bg_align:hover{
-    cursor: pointer;
-}
 .card-body p {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: larger;
     font-weight: 700;
+}
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #212529;
+}
+
+.card:hover .overlay {
+  opacity: 0.5;
+}
+
+.text {
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
